--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
     "watch": "webpack --mode development --watch",
-    "start": "webpack serve --mode development --open"
+    "start": "webpack serve --mode development --open",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -47,6 +49,7 @@
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
-    "air-datepicker": "^3.0.1"
+    "air-datepicker": "^3.0.1",
+    "gh-pages": "^3.2.3"
   }
 }
