--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "description": "Webpack ready for project",
   "main": "index.js",
+  "homepage": "https://eclipsemode.github.io/Hotel-Reservation-form",
   "scripts": {
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
     "watch": "webpack --mode development --watch",
     "start": "webpack serve --mode development --open",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,7 @@
     "css-loader": "^6.4.0",
     "eslint": "^8.8.0",
     "file-loader": "^6.2.0",
+    "gh-pages": "^3.2.3",
     "html-loader": "^3.0.0",
     "html-webpack-plugin": "^5.4.0",
     "mini-css-extract-plugin": "^2.4.2",
@@ -49,7 +51,6 @@
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
-    "air-datepicker": "^3.0.1",
-    "gh-pages": "^3.2.3"
+    "air-datepicker": "^3.0.1"
   }
 }
