room details collage with adaptive

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-start",
+  "name": "Hotel Reservation Project",
   "version": "1.0.0",
   "description": "Webpack ready for project",
   "main": "index.js",
