--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "html-loader": "^3.0.0",
     "html-webpack-plugin": "^5.4.0",
     "mini-css-extract-plugin": "^2.4.2",
+    "prettier": "^2.6.0",
     "pug": "^3.0.2",
     "pug-loader": "^2.4.0",
     "sass": "^1.43.2",
